--- a/style.css
+++ b/style.css
@@ -1,22 +1,42 @@
-body{
+.logo-links{
     display:flex;
-    flex-direction:column;
+    justify-content:space-between;
+    align-items:center;
+}
+
+ul{
+    display: flex;
+    list-style-type: none;
+    gap: 10px;
+    padding-inline-start: 0px;
+    margin-left: 40px;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.logo{
+    margin-left:20px;
 }
 
 .header{
-    flex-grow:1;
-    color: #49511D;
+    display: flex;
+    flex-direction: column;
 }
+
+.duplet{
+    display: flex;
+    margin: 40px;
+    gap: 20px;
+    justify-content: space-between;
+}
+
 .random{
-    flex-grow:1;
+    display: flex;
+    flex-direction: column;
 }
-.quote{
-    flex-grow:1;
-}
-.call{
-    flex-grow:1;
-}
-.footer{
-    flex-grow:1;
-    color: #49511D;
+
+.tiles{
+    display: flex;
 }
