--- a/style.css
+++ b/style.css
@@ -35,8 +35,50 @@ ul{
 .random{
     display: flex;
     flex-direction: column;
+    margin-top: 100px;
+    margin-bottom:100px;
+
 }
 
 .tiles{
     display: flex;
+    gap: 16px;
+    margin: 16px;
+
+}
+
+.random-header{
+    display: flex;
+    justify-content: center;
+}
+
+a{
+    text-decoration: none;
+}
+
+.button1{
+    background-color: #2c1aed;
+    border: none;
+    border-radius: 10px ;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 10px;
+    cursor: pointer;
+}
+.quote{
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.call{
+    display:flex;
+    justify-content: center;
+    padding: 64px;
+
 }
