--- a/style1.css
+++ b/style1.css
@@ -2,22 +2,26 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 body{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .button1{
-    background-color: #2c1aed;
-    border: none;
-    border-radius: 10px ;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 10px;
+    border-radius: 12px;
     cursor: pointer;
+    text-align: center;
+    padding: 1px 6px;
+    border-style: outset;
+    background-color: #3883f6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: aliceblue;
+    text-decoration:none;
 }
